--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 14
         targetSdkVersion 23
         versionName project.VERSION_NAME
         versionCode project.VERSION_CODE
@@ -19,5 +19,5 @@ android {
 }
 
 dependencies {
-    compile project(":library")
+    api project(":library")
 }
